@@ -345,7 +345,7 @@ Set verbose mode. If the \fB-v\fR option is specified, \fBdtrace\fR produces a p
 .ad
 .sp .6
 .RS 4n
-Report the highest D programming interface version supported by \fBdtrace\fR. The version information is printed to \fBstdout\fR and the \fBdtrace\fR command exits. Refer to the \fI\fR for more information about DTrace versioning features.
+Report the highest D programming interface version supported by \fBdtrace\fR. The version information is printed to \fBstdout\fR and the \fBdtrace\fR command exits. Refer to the \fI\fR for more information about DTrace versioning features. In conjunction with \fB-v\fR, also reports information on the version of the \fBdtrace\fR(1) tool and associated library.
 .RE
 
 .sp
