@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2009, 2012, 2013 Oracle, Inc.  All rights reserved.
+# Copyright 2009, 2012, 2013, 2015 Oracle, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
@@ -109,6 +109,7 @@ LIBDTRACE_1.0 {
 	dtrace_vopen;
 	dtrace_work;
 	dtrace_xstr2desc;
+	_libdtrace_vcs_version;
     local:
 	*;
 };
